<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jscience</groupId>
        <artifactId>jscience-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>jscience-natural</artifactId>
    <packaging>jar</packaging>

    <name>JScience Natural</name>
    <description>JScience Natural Sciences Layer - Physics, Chemistry, Biology, Earth, Medicine, Computing</description>

    <!-- Force IDE resync -->
    <dependencies>
        <!-- Core module -->
        <dependency>
            <groupId>org.jscience</groupId>
            <artifactId>jscience-core</artifactId>
        </dependency>


        <!-- JSON Support -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
        </dependency>

        <!-- Quantum Computing: Strange -->
        <dependency>
            <groupId>org.redfx</groupId>
            <artifactId>strange</artifactId>
            <version>0.2.0</version>
        </dependency>

        <!-- Quantum Computing: Quantum4J -->
        <!-- Dependency not in central, placeholders used
        <dependency>
            <groupId>io.quantum4j</groupId>
            <artifactId>quantum4j-core</artifactId>
            <version>1.3.2</version>
        </dependency>
        -->

        <!-- JSBML -->
        <dependency>
            <groupId>org.sbml.jsbml</groupId>
            <artifactId>jsbml</artifactId>
            <version>1.6.1</version>
        </dependency>

        <!-- JAXB (Jakarta XML Binding) -->
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>4.0.0</version>
        </dependency>

        <!-- Quantum Computing: Amazon Braket -->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>braket</artifactId>
            <version>2.35.5</version>
        </dependency>

        <dependency>
            <groupId>com.github.studygameengines</groupId>
            <artifactId>java-fbx-loader</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../launchers/lib/java-fbx-loader-v1.0.jar</systemPath>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/*.jpg</exclude>
                    <exclude>**/*.png</exclude>
                    <exclude>**/*.tif</exclude>
                    <exclude>**/*.tiff</exclude>
                    <exclude>**/*.obj</exclude>
                    <exclude>**/*.gltf</exclude>
                    <exclude>**/*.glb</exclude>
                    <exclude>**/*.bin</exclude>
                    <exclude>**/*.fbx</exclude>
                    <exclude>**/*.stl</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**/*.jpg</include>
                    <include>**/*.png</include>
                    <include>**/*.tif</include>
                    <include>**/*.tiff</include>
                    <include>**/*.obj</include>
                    <include>**/*.gltf</include>
                    <include>**/*.glb</include>
                    <include>**/*.bin</include>
                    <include>**/*.fbx</include>
                    <include>**/*.stl</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>17</release>
                    <excludes>
                        <!-- Medical/Consultation files remain in jscience-social -->
                     </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <!-- JAXB Plugin - Enabled to process restored XSDs -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jaxb2-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>xjc</id>
                        <goals>
                            <goal>xjc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <sources>
                        <source>src/main/resources/xsd/animl-core.xsd</source>
                        <source>src/main/resources/xsd/animl-technique.xsd</source>
                        <source>src/main/resources/xsd/ThermoML.xsd</source>
                    </sources>
                    <packageName>org.astm.animl.schema.core.draft._0</packageName>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
